@@ -262,7 +262,7 @@ class SipDigestLeak:
         tag = generate_random_string(8, 8, 'hex')
 
         msg = create_message('INVITE', self.localip, self.contact_domain, self.from_user, self.from_name, self.from_domain,
-                             self.to_user, self.to_name, self.to_domain, proto, self.domain, self.user_agent, lport, branch, callid, tag, cseq, '', '', 1, '', self.sdp, '', self.route, self.ppi, self.pai, '')
+                             self.to_user, self.to_name, self.to_domain, proto, self.domain, self.user_agent, lport, branch, callid, tag, cseq, '', '', 1, '', self.sdp, '', self.route, self.ppi, self.pai, '', 1)
 
         print(self.c.YELLOW + '[=>] Request INVITE' + self.c.WHITE)
 
@@ -317,7 +317,7 @@ class SipDigestLeak:
                 # send ACK
                 print(self.c.YELLOW + '[=>] Request ACK')
                 msg = create_message('ACK', self.localip, self.contact_domain, self.from_user, self.from_name, self.from_domain,
-                                     self.to_user, self.to_name, self.to_domain, proto, self.domain, self.user_agent, lport, branch, callid, tag, cseq, totag, '', 1, '', 0, via, rr, '', '', '')
+                                     self.to_user, self.to_name, self.to_domain, proto, self.domain, self.user_agent, lport, branch, callid, tag, cseq, totag, '', 1, '', 0, via, rr, '', '', '', 1)
 
                 if self.verbose == 1:
                     print(self.c.BWHITE + '[+] Sending to %s:%s/%s ...' %
@@ -364,7 +364,7 @@ class SipDigestLeak:
                     print(self.c.YELLOW + '[=>] Request INVITE' + self.c.WHITE)
 
                     msg = create_message('INVITE', self.localip, self.contact_domain, self.from_user, self.from_name, self.from_domain, self.to_user, self.to_name, self.to_domain, self.proto,
-                                         self.domain, self.user_agent, lport, branch, callid, tag, cseq, '', digest, auth_type, '', self.sdp, via, self.route, self.ppi, self.pai, '')
+                                         self.domain, self.user_agent, lport, branch, callid, tag, cseq, '', digest, auth_type, '', self.sdp, via, self.route, self.ppi, self.pai, '', 1)
 
                     if self.verbose == 1:
                         print(self.c.BWHITE + '[+] Sending to %s:%s/%s ...' %
@@ -415,7 +415,7 @@ class SipDigestLeak:
                                     print(self.c.YELLOW + '[=>] Request ACK')
 
                                     msg = create_message('ACK', self.localip, self.contact_domain, self.from_user, self.from_name, self.from_domain,
-                                                         self.to_user, self.to_name, self.to_domain, proto, self.domain, self.user_agent, lport, branch, callid, tag, cseq, totag, '', 1, '', 0, via, rr, '', '', '')
+                                                         self.to_user, self.to_name, self.to_domain, proto, self.domain, self.user_agent, lport, branch, callid, tag, cseq, totag, '', 1, '', 0, via, rr, '', '', '', 1)
 
                                     if self.verbose == 1:
                                         print(self.c.BWHITE + '[+] Sending to %s:%s/%s ...' %
@@ -449,7 +449,7 @@ class SipDigestLeak:
                 print(self.c.YELLOW + '[=>] Request ACK')
 
                 msg = create_message('ACK', self.localip, self.contact_domain, self.from_user, self.from_name, self.from_domain,
-                                     self.to_user, self.to_name, self.to_domain, proto, cdomain, self.user_agent, lport, branch, callid, tag, cseq, totag, digest, auth_type, '', 0, via, rr, '', '', '')
+                                     self.to_user, self.to_name, self.to_domain, proto, cdomain, self.user_agent, lport, branch, callid, tag, cseq, totag, digest, auth_type, '', 0, via, rr, '', '', '', 1)
 
                 if self.verbose == 1:
                     print(self.c.BWHITE + '[+] Sending to %s:%s/%s ...' %
