@@ -261,7 +261,7 @@ class SipExten:
                 self.from_user = to_user
 
             msg = create_message(self.method, '', contact_domain, self.from_user, '', self.domain,
-                                 to_user, '', self.domain, self.proto, self.domain, self.user_agent, lport, '', '', '', '1', '', '', 1, '', 0, '', self.route, '', '', '')
+                                 to_user, '', self.domain, self.proto, self.domain, self.user_agent, lport, '', '', '', '1', '', '', 1, '', 0, '', self.route, '', '', '', 1)
 
             try:
                 sock.settimeout(5)
