@@ -12,7 +12,7 @@ from lib.params import get_sipsend_args
 
 
 def main():
-    ip, host, proxy, rport, lport, proto, method, domain, contact_domain, from_name, from_user, from_domain, from_tag, to_name, to_user, to_domain, to_tag, user, pwd, digest, branch, callid, cseq, sdp, sdes, user_agent, localip, nocolor, ofile, ppi, pai , header= get_sipsend_args()
+    ip, host, proxy, rport, lport, proto, method, domain, contact_domain, from_name, from_user, from_domain, from_tag, to_name, to_user, to_domain, to_tag, user, pwd, digest, branch, callid, cseq, sdp, sdes, user_agent, localip, nocolor, ofile, ppi, pai, header, nocontact = get_sipsend_args()
 
     s = SipSend()
     s.ip = ip
@@ -47,6 +47,7 @@ def main():
     s.ppi = ppi
     s.pai = pai
     s.header = header
+    s.nocontact = nocontact
 
     s.start()
 
